--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,5 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+Fouad Yasin <fouad.yasin01@gmail.com>
+Soukaina Lachheb <soukainalachheb93@gmail.com>
